--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,20 +3,21 @@ name: Python package
 on:
   pull_request:
     branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 
 jobs:
   test:
-    name: Test with pytest
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      
+    - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest
+        python-version: '3.13'
+
     - name: Run tests
       run: pytest
+      
