--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,21 +3,19 @@ name: Python package
 on:
   pull_request:
     branches: [ "main" ]
-  push:
-    branches: [ "main" ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-      
-    - name: Setup Python
+    - uses: actions/checkout@v3
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.13'
-
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
     - name: Run tests
       run: pytest
-      
