--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,12 +14,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: '3.x'   # Puedes especificar una versión, ej. '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest  # <-- Add this line
+        pip install pytest
         pip install -r requirements.txt
 
     - name: Run tests
