--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,19 +14,24 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'   # Usar una versión estable
+        python-version: '3.10'
 
     - name: Check Python version and path
       run: |
         which python
         python --version
+        which python3
+        python3 --version
+        which pip
         pip --version
+        which pip3
+        pip3 --version
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
-        pip install -r requirements.txt
+        python -m pip install pytest
+        python -m pip install -r requirements.txt
 
     - name: Run tests
-      run: pytest
+      run: python -m pytest
