--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,30 +8,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
+    - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
-
-    - name: Check Python version and path
-      run: |
-        which python
-        python --version
-        which python3
-        python3 --version
-        which pip
-        pip --version
-        which pip3
-        pip3 --version
-
+        python-version: "3.10"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest
-        python -m pip install -r requirements.txt
-
+        pip install pytest
     - name: Run tests
-      run: python -m pytest
+      run: pytest
